# FairMCA

./: README.md  fair_mca_synthetic_bias.ipynb  final_adult.ipynb  final_banking.ipynb  final_compas.ipynb  final_german.ipynb  methods.py
fair_unsupervised_fairness/: README.md  pyproject.toml
fair_unsupervised_fairness/examples/: fairness_example.ipynb
fair_unsupervised_fairness/src/fair_repr_eval/: __init__.py  evaluator.py  metrics.py
fair_unsupervised_fairness/tests/: conftest.py  test_evaluator.py  test_metrics.py
